# gpt-notes

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
experiments/: 01_data_smoketest.py  02_train_bigram.py  03_attention_smoketest.py  04_block_smoketest.py  05_train_gpt.py  get_data.py
src/gpt_notes/: attention.py  bigram.py  config.py  data.py  model.py  utils.py
